--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="google-site-verification" content="ENVsI8aWwUYJWgIq2BJNpioT-jIKRRXS8zjVPCoZ78s" />
   <title>YoWhatsApp APK Download 2026 – Updated v10.10 with Advanced Features</title>
 
   <style>
@@ -345,3 +346,4 @@
   </div>
 </body>
 </html>
+
